crates/loq_cli/tests/snapshots/snapshots__missing_file_stdout.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: stdout
---
⚠ nonexistent.rs  file not found
✔ 0 files ok
