crates/loq_cli/tests/snapshots/snapshots__multiple_rules.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 112
expression: stdout
---
✖     15 > 10     toolong.rs
1 violation (TIME)
