crates/loq_cli/tests/snapshots/snapshots__no_config_uses_defaults.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 103
expression: stdout
---
✔ 1 files ok (TIME)
