crates/loq_cli/tests/snapshots/snapshots__stdin_file_list.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 166
expression: stdout
---
✔ 2 files ok (TIME)
